# longitude-vault

./: Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  SPEC.md
.github/workflows/: ci.yml
crates/fixture-gen/: Cargo.toml
crates/fixture-gen/src/: main.rs
crates/longitude-cli/: Cargo.toml
crates/longitude-cli/src/: main.rs
crates/longitude-cli/tests/: keygen.rs
crates/longitude-engine/: Cargo.toml
crates/longitude-engine/src/: lib.rs  model.rs  month.rs  project.rs  strategy.rs
crates/longitude-engine/tests/: projection.rs
crates/longitude-vault/: Cargo.toml
crates/longitude-vault/src/: container.rs  demo.rs  grammar.rs  lib.rs  report.rs  validate.rs  vault.rs
crates/longitude-vault/tests/: conformance.rs
fixtures/: README.md
fixtures/hostile/: absolute.lon  badname.lon  bomb.lon  duplicate.lon  hardlink.lon  symlink.lon  traversal.lon
fixtures/identities/: fixture-key.pub  fixture-key.txt
fixtures/valid/: demo-export.lon  demo.lon
fixtures/valid/demo.lonvault/: manifest.toml  profile.toml
fixtures/valid/demo.lonvault/accounts/: cold-storage.toml  mortgage.toml  schwab-brokerage.toml
fixtures/valid/demo.lonvault/overrides/: col-krakow.toml
fixtures/valid/demo.lonvault/scenarios/: half-life-krakow-tokyo.toml  stay-home.toml
fixtures/valid/demo.lonvault/snapshots/: 2026-05-31.toml  2026-06-30.toml
