[workspace]
resolver = "2"
members = ["crates/longitude-vault", "crates/longitude-cli", "crates/fixture-gen"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aaronbuilt/longitude-vault"

[workspace.dependencies]
age = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tar = "0.4"
thiserror = "2"
toml = "0.8"
zstd = "0.13"
