[package]
name = "longitude-vault"
description = "Reference implementation of the Longitude vault format: load, validate, pack, unpack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
age = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tempfile = "3"
